--- a/projeto4/news.html
+++ b/projeto4/news.html
@@ -41,6 +41,35 @@
             
         </div>
     </section>
+    <aside>
+        <div class="widget">
+            <div class="widget_title">
+                <div class="widget_title_text">Departaments</div>
+                <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body">
+                ...
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget_title">
+                <div class="widget_title_text">Mais Populares</div>
+                <div class="widget_title_bar"></div>                            
+            </div>
+            <div class="widget_body">
+                <ul>
+                    <li><a href="">U.F.C</a></li>
+                    <li><a href="">N.F.L</a></li>
+                    <li><a href="">N.B.A</a></li>
+                    <li><a href="">Cariocão</a></li>
+                    <li><a href="">Boxe</a></li>
+                    <li><a href="">Judô</a></li>
+                    <li><a href="">Atletismo</a></li>
+                    <li><a href="">Tennis</a></li>
+                </ul>
+            </div>
+        </div>
+    </aside>
     <section id="coments">
         <div>
             
